--- a/styles/blocks/photo-grid/photo-grid.css
+++ b/styles/blocks/photo-grid/photo-grid.css
@@ -3,7 +3,6 @@
 .photo-grid{
     display: grid;
     margin: 92px 48px 0 48px;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(3, auto); 
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     gap: 16px;
 }
