--- a/styles/blocks/cover/__overlay/cover__overlay.css
+++ b/styles/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,11 @@
 .cover__overlay{
-    min-height: 740px;
+    position: absolute;
+    width: 1184px;
+    height: 740px;
     background-color: #2A2C2F;
     opacity: 0.3;
+}
+
+.cover__overlay:hover{
+    opacity: 0.8;
 }
