--- a/styles/blocks/footer/footer.css
+++ b/styles/blocks/footer/footer.css
@@ -2,7 +2,8 @@
 @import url(__menu/__item/footer__menu__item.css);
 
 .footer{
-    margin:0 48px;
+    margin-left: 48px;
+    margin-right: 48px;
     display: flex;
     justify-content: space-between;
     align-items: center;
