--- a/styles/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/styles/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,5 +1,5 @@
 .header__lang-link_active{
-    text-decoration-line: underline;
+    color: #FFFFFF;
     margin-right: 18px;
     margin-top: 0;
 }
