--- a/styles/blocks/header/__lang-link/header__lang-link.css
+++ b/styles/blocks/header/__lang-link/header__lang-link.css
@@ -3,9 +3,9 @@
 
 .header__lang-link{
     display: flex;
-    color: #FFFFFF;
+    justify-content: space-between;
+    list-style: none;
     margin-top: 46px;
-    margin-right: 48px;
     font-size: 24px;
     line-height: 28px;
 }
