--- a/styles/blocks/lead/__title/lead__title.css
+++ b/styles/blocks/lead/__title/lead__title.css
@@ -3,6 +3,21 @@
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
-    margin: auto;
+    margin: 0 auto;
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    .lead__title {
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__title {
+        max-width: 288px;
+        font-size: 40px;
+        line-height: 44px;
+    }
 }
