--- a/styles/blocks/lead/lead.css
+++ b/styles/blocks/lead/lead.css
@@ -2,3 +2,27 @@
 @import url(__subtitle/lead__subtitle.css);
 @import url(__image/lead__image.css);
 @import url(__caption/lead__caption.css);
+
+.lead {
+    max-width: 984px;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead {
+        margin-top: 48px;
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead {
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead {
+        max-width: 320px;
+    }
+}
