--- a/styles/blocks/page/page.css
+++ b/styles/blocks/page/page.css
@@ -1,9 +1,14 @@
 @import url(__section/page__section.css);
 
 .page{
-    background-color: #2A2C2F;
     color: #FFFFFF;
     max-width: 1280px;
     margin: 0 auto;
     font-family: 'Inter', sans-serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
 }
