--- a/styles/blocks/place/__image/place__image.css
+++ b/styles/blocks/place/__image/place__image.css
@@ -1,5 +1,24 @@
-.places__image{
-    grid-area: image;
+.place__image{
+    grid-row: 2/5;
+    object-fit: cover;
     max-width: 460px;
-    margin-top: 48px;
+}
+
+@media screen and (max-width: 1024px) {
+    .place__image {
+        max-width: 440px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__image {
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .place__image {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
