--- a/styles/blocks/place/__website/place__website.css
+++ b/styles/blocks/place/__website/place__website.css
@@ -1,7 +1,7 @@
 @import url(__link/place__website__link.css);
 @import url(__url-heading/place__website__url-heading.css);
 
-.places__website{
-    grid-area: website;
+.place__website{
     align-self: end;
+    margin-bottom: 48px;
 }
