--- a/styles/blocks/place/place.css
+++ b/styles/blocks/place/place.css
@@ -1,17 +1,36 @@
 @import url(__title/place__title.css);
 @import url(__image/place__image.css);
-@import url(__text/place__text.css);
-@import url(__text-two/place__text-two.css);
+@import url(__paragraph/place__paragraph.css);
 @import url(__website/place__website.css);
 
 .place{
     display: grid;
     column-gap: 40px;
     margin-bottom: 80px;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(3, auto);
-    grid-template-areas:
-    "title website"
-    "image text"
-    "image text-two"; 
+    grid-template-columns: 460px 1fr;
+}
+
+@media screen and (max-width: 1024px) {
+    .place {
+        grid-template-columns: 440px 1fr;
+        grid-column-gap: 32px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place {
+        grid-template-columns: 340px 1fr;
+        grid-column-gap: 28px;
+        max-width: 720px;
+        margin-top: 73px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place {
+        margin-top: 49px;
+        max-width: 320px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
