--- a/styles/blocks/header/__logo/header__logo.css
+++ b/styles/blocks/header/__logo/header__logo.css
@@ -3,3 +3,16 @@
     width: 176px;
     height: 52px;
 }
+
+@media screen and (max-width: 768px) {
+    .header__logo {
+        margin-top: 28px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header__logo {
+        margin-top: 16px;
+        max-width: 142px;
+    }
+}
