--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -2,6 +2,10 @@
 @import url(__lang-link/header__lang-link.css);
 
 .header{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
