--- a/styles/blocks/intro/intro.css
+++ b/styles/blocks/intro/intro.css
@@ -1,3 +1,4 @@
 @import url(__title/intro__title.css);
 @import url(__text/intro__text.css);
 @import url(__list/intro__list.css);
+@import url(__list/__span-number/intro__list__span-number.css);
