--- a/styles/blocks/page/page.css
+++ b/styles/blocks/page/page.css
@@ -4,11 +4,11 @@
     color: #FFFFFF;
     max-width: 1280px;
     margin: 0 auto;
-    font-family: 'Inter', sans-serif;
-    text-rendering: optimizeLegibility;
+    font-family: 'Inter',  Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
 }
