--- a/styles/blocks/cover/__link/cover__link.css
+++ b/styles/blocks/cover/__link/cover__link.css
@@ -1,15 +1,23 @@
 .cover__link{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     text-decoration: none;
     color: #FFFFFF;
-    max-width: 1184px;
     min-height: 740px;
     background-image: url(../../../../images/cover-trains.jpg);
     background-size: cover;
     background-position: center;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     z-index: 0;
     position: relative;
 }
@@ -36,4 +44,25 @@
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .cover__link {
+        max-width: 1024px;
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__link {
+        min-height: 480px;
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__link {
+        min-height: 200px;
+        max-width: 320px;
+    }
 }
