--- a/styles/blocks/cover/__subtitle/cover__subtitle.css
+++ b/styles/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,17 @@
 .cover__subtitle{
     max-width: 360px;
-    padding-top: 32px;
+    margin-top: 32px;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
     z-index: 1;
+}
+
+@media screen and (max-width: 320px) {
+    .cover__subtitle {
+        max-width: 288px;
+        font-size: 14px;
+        line-height: 16px;
+        margin-top: 16px;
+    }
 }
