--- a/styles/blocks/cover/__title/cover__title.css
+++ b/styles/blocks/cover/__title/cover__title.css
@@ -7,3 +7,11 @@
     z-index: 1;
     margin: 0;
 }
+
+@media screen and (max-width: 320px) {
+    .cover__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
