--- a/styles/blocks/footer/__menu/__item/footer__menu__item.css
+++ b/styles/blocks/footer/__menu/__item/footer__menu__item.css
@@ -7,3 +7,11 @@
 .footer__menu__item:hover{
     opacity: 0.8;
 }
+
+@media screen and (max-width: 320px) {
+    .footer__menu__item {
+        font-size: 24px;
+        line-height: 24px;
+        margin-bottom: 32px;
+    }
+}
