--- a/styles/blocks/footer/__menu/footer__menu.css
+++ b/styles/blocks/footer/__menu/footer__menu.css
@@ -1,4 +1,21 @@
 .footer__menu{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style-type: none;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+@media screen and (max-width: 320px) {
+    .footer__menu {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: start;
+    }
 }
