--- a/styles/blocks/footer/footer.css
+++ b/styles/blocks/footer/footer.css
@@ -1,8 +1,29 @@
 @import url(__menu/footer__menu.css);
 @import url(__menu/__item/footer__menu__item.css);
+@import url(__autor/footer__autor.css);
 
 .footer{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer {
+        max-width: 186px;
+        margin-top: 64px;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+    }
 }
