--- a/styles/blocks/header/__lang-link/header__lang-link.css
+++ b/styles/blocks/header/__lang-link/header__lang-link.css
@@ -2,10 +2,22 @@
 @import url(_not-active/header__lang-link_not-active.css);
 
 .header__lang-link{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     list-style: none;
     margin-top: 46px;
     font-size: 24px;
     line-height: 28px;
+}
+
+@media screen and (max-width: 320px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 20px;
+        margin-top: 30px;
+    }
 }
