--- a/styles/blocks/intro/__title/intro__title.css
+++ b/styles/blocks/intro/__title/intro__title.css
@@ -3,3 +3,20 @@
     font-size: 54px;
     line-height: 58px;
 }
+
+@media screen and (max-width: 768px) {
+    .intro__title {
+        max-width: 720px;
+        font-size: 54px;
+        line-height: 58px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        max-width: 288px;
+        margin: 0;
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
