--- a/styles/blocks/lead/__image/lead__image.css
+++ b/styles/blocks/lead/__image/lead__image.css
@@ -2,3 +2,21 @@
     max-width: 100%;
     margin-top: 64px;
 }
+
+@media screen and (max-width: 1024px) {
+    .lead__image {
+        margin-top: 56px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead__image {
+        margin-top: 56px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__image {
+        margin-top: 40px;
+    }
+}
