--- a/styles/blocks/lead/__subtitle/lead__subtitle.css
+++ b/styles/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,8 +2,23 @@
     margin: 32px auto 0;
     max-width: 640px;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 30px;
     line-height: 36px;
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    .lead__subtitle {
+        max-width: 640px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__subtitle {
+        max-width: 288px;
+        font-size: 16px;
+        line-height: 20px;
+        margin-top: 16px;
+    }
 }
