--- a/styles/blocks/page/__section/__width_large/page__section__width_large.css
+++ b/styles/blocks/page/__section/__width_large/page__section__width_large.css
@@ -2,3 +2,17 @@
     margin-left: 48px;
     margin-right: 48px;
 }
+
+@media screen and (max-width: 768px) {
+    .page__section__width_large {
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .page__section__width_large {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
