--- a/styles/blocks/page/__section/__width_small/page__section__width_small.css
+++ b/styles/blocks/page/__section/__width_small/page__section__width_small.css
@@ -2,3 +2,24 @@
     margin-left: 148px;
     margin-right: 148px;
 }
+
+@media screen and (max-width: 1024px) {
+    .page__section__width_small {
+        margin-left: 48px;
+        margin-right: 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .page__section__width_small {
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .page__section__width_small {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
