--- a/styles/blocks/page/__section/page__section.css
+++ b/styles/blocks/page/__section/page__section.css
@@ -4,3 +4,15 @@
 .page__section{
     margin-top: 92px;
 }
+
+@media screen and (max-width: 768px) {
+    .page__section {
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .page__section {
+        margin-top: 64px;
+    }
+}
