--- a/styles/blocks/photo-grid/photo-grid.css
+++ b/styles/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,13 @@
 @import url(__item/photo-grid__item.css);
 
 .photo-grid{
+    display: -ms-grid;
     display: grid;
     max-width: 1184px;
     grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
     justify-items: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 16px;
 }
