--- a/styles/blocks/place/__paragraph/place__paragraph.css
+++ b/styles/blocks/place/__paragraph/place__paragraph.css
@@ -3,9 +3,18 @@
     font-size: 18px;
     line-height: 163%;
     font-weight: 400;
-    align-self: start;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
 }
 
 .place__paragraph:first-of-type {
     margin-bottom: 26px;
+}
+
+@media screen and (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 163%;
+    }
 }
