--- a/styles/blocks/place/__title/place__title.css
+++ b/styles/blocks/place/__title/place__title.css
@@ -1,11 +1,29 @@
 .place__title{
     margin: 0;
     margin-bottom: 48px;
-    align-self: end;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
     max-width: 460px;
     max-height: 152px;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
+}
+
+@media screen and (max-width: 768px) {
+    .place__title {
+    max-width: 340px;
+    font-size: 42px;
+    line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__title {
+        font-size: 32px;
+        line-height: 35px;
+        margin-bottom: 32px;
+    }
 }
