--- a/styles/blocks/place/__website/__link/place__website__link.css
+++ b/styles/blocks/place/__website/__link/place__website__link.css
@@ -1,7 +1,8 @@
 .place__website__link{
     font-size: 18px;
     line-height: 22px;
-    text-decoration-line: underline;
+    -webkit-text-decoration-line: underline;
+            text-decoration-line: underline;
     color: #FFFFFF;
 }
 
