--- a/styles/blocks/place/place.css
+++ b/styles/blocks/place/place.css
@@ -4,14 +4,19 @@
 @import url(__website/place__website.css);
 
 .place{
+    display: -ms-grid;
     display: grid;
-    column-gap: 40px;
+    -webkit-column-gap: 40px;
+       -moz-column-gap: 40px;
+            column-gap: 40px;
     margin-bottom: 80px;
+    -ms-grid-columns: 460px 40px 1fr;
     grid-template-columns: 460px 1fr;
 }
 
 @media screen and (max-width: 1024px) {
     .place {
+        -ms-grid-columns: 440px 32px 1fr;
         grid-template-columns: 440px 1fr;
         grid-column-gap: 32px;
     }
@@ -19,6 +24,7 @@
 
 @media screen and (max-width: 768px) {
     .place {
+        -ms-grid-columns: 340px 28px 1fr;
         grid-template-columns: 340px 1fr;
         grid-column-gap: 28px;
         max-width: 720px;
@@ -28,6 +34,17 @@
 
 @media screen and (max-width: 320px) {
     .place {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        max-width: 380px;
         margin-top: 49px;
         max-width: 320px;
         margin-left: 0px;
