--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -5,7 +5,7 @@
     text-decoration: none;
     color: #FFFFFF;
     min-height: 740px;
-    background-image: url(../../../../images/cover-trains.jpg);
+    background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
     background-position: center;
     -webkit-box-orient: vertical;
