--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,7 +4,7 @@
     color: #FFFFFF;
     max-width: 1280px;
     margin: 0 auto;
-    font-family: 'Inter',  Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
