--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -10,6 +10,7 @@
 
 @media screen and (max-width: 320px) {
     .footer__menu {
+        padding: 0;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
