--- a/pages/index.css
+++ b/pages/index.css
@@ -17,7 +17,6 @@
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 
-@import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
@@ -44,4 +43,5 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__menu/footer__menu.css);
 @import url(../blocks/footer/__menu/__item/footer__menu__item.css);
+@import url(../blocks/footer/__menu/__link/footer__menu__link.css);
 @import url(../blocks/footer/__autor/footer__autor.css);
