--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -37,6 +37,7 @@
 .cover__link:hover:before {
     opacity: 0.8;
     content: '';
+    transition-duration: .5s;
     background-color: #2A2C2F;
     z-index: 1;
     position: absolute;
