--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,8 @@
     color: #FFFFFF;
     max-width: 1280px;
     margin: 0 auto;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
+    font-weight: 400;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
