--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -12,11 +12,17 @@
     }
 }
 
-@media screen and (max-width: 320px) {
-    .intro__title {
-        max-width: 288px;
+@media screen and (max-width: 425px) {
+    .lead__title {
         margin: 0;
         font-size: 32px;
         line-height: 35px;
+    }
+}
+
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        max-width: 288px;
     }
 }
