--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle{
     max-width: 360px;
-    margin-top: 32px;
+    margin: 32px 0 0 0;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
