--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -2,13 +2,15 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 767px) {
     .footer__menu {
         padding: 0;
         -webkit-box-orient: vertical;
