--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,3 @@
-@import url(_active/header__lang-link_active.css);
-@import url(_not-active/header__lang-link_not-active.css);
-
 .header__lang-link{
     display: -webkit-box;
     display: -ms-flexbox;
@@ -9,9 +6,16 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     list-style: none;
-    margin-top: 46px;
+    margin: 46px 18px 0 0;
     font-size: 24px;
     line-height: 28px;
+    color: #FFFFFF;
+    transition-duration: .5s;
+    text-decoration: none;
+}
+
+.header__lang-link:hover{
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 320px) {
