--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,18 +1,10 @@
 .header__logo{
-    margin-top: 28px;
-    width: 176px;
-    height: 52px;
-}
-
-@media screen and (max-width: 768px) {
-    .header__logo {
-        margin-top: 28px;
-    }
+    max-width: 176px;
+    margin: 28px 0 0 0;
 }
 
 @media screen and (max-width: 320px) {
     .header__logo {
-        margin-top: 16px;
         max-width: 142px;
     }
 }
