--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,4 +5,19 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    margin: 0 48px ;
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .header {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
 }
