--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,6 @@
 .intro__text{
     max-width: 690px;
-    margin-top: 40px;
+    margin: 40px 0 0 0;
     font-weight: normal;
     font-size: 16px;
     line-height: 163%;
