--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,15 +8,9 @@
     text-align: center;
 }
 
-@media screen and (max-width: 768px) {
-    .lead__subtitle {
-        max-width: 640px;
-    }
-}
-
 @media screen and (max-width: 425px) {
     .lead__subtitle {
-        max-width: 288px;
+        width: calc(100% - 32px);
         font-size: 16px;
         line-height: 20px;
         margin-top: 16px;
