--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,9 +7,9 @@
     text-align: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .lead__title {
-        max-width: 288px;
+        width: calc(100% - 32px);
         font-size: 40px;
         line-height: 44px;
     }
