--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,23 +1,25 @@
 .lead {
     max-width: 984px;
-    margin: 0 auto;
+    margin: 56px auto 0;
 }
 
 @media screen and (max-width: 1024px) {
     .lead {
-        margin-top: 48px;
+        margin:48px auto 48px;
         max-width: 928px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead {
+        margin:24px auto 24px;
         max-width: 768px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead {
+        margin:16px auto 16px;
         max-width: 320px;
     }
 }
