--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 360px) {
     .place__image {
-        max-width: 320px;
+        width: 100%;
         margin: 32px 0;
     }
 }
