--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-    margin: 0 auto;
+    margin: 0 auto 26px;
     font-size: 18px;
     line-height: 163%;
     font-weight: 400;
@@ -8,13 +8,11 @@
         align-self: start;
 }
 
-.place__paragraph:first-of-type {
-    margin-bottom: 26px;
-}
+
 
 @media screen and (max-width: 768px) {
     .place__paragraph {
         font-size: 16px;
-        line-height: 163%;
+        margin: 0 16px 26px;
     }
 }
