--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,7 +5,6 @@
         -ms-grid-row-align: end;
         align-self: end;
     max-width: 460px;
-    max-height: 152px;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -24,6 +23,6 @@
     .place__title {
         font-size: 32px;
         line-height: 35px;
-        margin-bottom: 32px;
+        margin: 0 auto 32px;
     }
 }
