--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,8 @@
-.place__website__url-heading{
+.place__url-heading{
+    margin: 0 0 12px 0 ;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 2px;
     color: #AAAAAA;
+    align-self: end;
 }
