--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,10 +3,11 @@
         -ms-grid-row-align: end;
         align-self: end;
     margin-bottom: 48px;
+    
 }
 
 @media screen and (max-width: 360px) {
     .place__website {
-        margin-bottom: 0;
+        margin: 0 16px 0 16px;
     }
 }
