--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -18,6 +18,12 @@
     opacity: 0.8;
 }
 
+@media screen and (max-width: 768px) {
+    .header__lang-link {
+        margin-right: 24px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
