--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,7 +6,7 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     list-style: none;
-    margin: 46px 18px 0 0;
+    margin: 46px 0 0;
     font-size: 24px;
     line-height: 28px;
     color: #FFFFFF;
