--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -13,6 +13,6 @@
 @media screen and (max-width: 768px) {
     .place__paragraph {
         font-size: 16px;
-        margin: 0 16px 26px;
+        margin: 0;
     }
 }
