--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -23,7 +23,7 @@
         grid-template-columns: 340px 1fr;
         grid-column-gap: 28px;
         max-width: 720px;
-        margin-top: 73px;
+        margin: 73px auto 0;
     }
 }
 
