--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,7 +8,9 @@
         align-self: start;
 }
 
-
+.place__paragraph:last-child {
+    margin-bottom: 0px;
+}
 
 @media screen and (max-width: 768px) {
     .place__paragraph {
