--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -17,7 +17,6 @@
 
 @media screen and (max-width: 360px) {
     .header {
-        margin-left: 16px;
-        margin-right: 16px;
+        margin: 0 16px;
     }
 }
