--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 320px) {
     .lead {
-        margin:16px auto 16px;
+        margin: 48px auto 0;
         max-width: 320px;
     }
 }
