--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 768px) {
     .place__title {
-    max-width: 340px;
+    max-width: 320px;
     font-size: 42px;
     line-height: 46px;
     }
@@ -23,6 +23,8 @@
     .place__title {
         font-size: 32px;
         line-height: 35px;
-        margin: 0 auto 32px;
+        margin:0 0 32px 16px;
+        display: flex;
+        align-items: flex-start
     }
 }
