--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -9,3 +9,9 @@
             align-items: center;
     gap: 16px;
 }
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        gap: 12px;
+    }
+}
