--- a/blocks/footer/__autor/footer__autor.css
+++ b/blocks/footer/__autor/footer__autor.css
@@ -6,6 +6,7 @@
 
 @media screen and (max-width: 425px) {
 .footer__autor{
+        margin-top: 16px;
         font-size: 14px;
         line-height: 14px;
     }
