--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -19,3 +19,9 @@
         margin-right: 16px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        max-width: 288px;
+    }
+}
